# cancer-survival-predictor

./: .gitignore  README.md  README_full.md  RESEARCH.md  finetune_strategies.md  main.py  pyproject-old.toml  pyproject.toml  requirements.txt  wand------b.py
configs/: data.yaml  multimodal.yaml  pathology_llm.yaml
data/interim/: maf_paths_from_new_json2.csv  pca_gene_expression_data0.csv
figures/: evaluation_report.md  evaluation_summary.json  results_pathology_tasks.csv
notebooks/: README.md  finetunePathText.ipynb  srvival-analysis.ipynb
src/: _weave_init.py
src/data/: ingest_mutation.py  splits.py
src/evaluation/: evaluate_all.py  metrics.py  pathology_eval.py  stratification.py
src/features/: clinical.py  expression.py  mutation.py
src/training/: biobert_finetune_instruction.py  build_multitask_qa.py  diagnose_data.py  distill_cot.py  distill_cot_v2.py  evaluate_all_models.py  evaluate_instruction_tuned.py  extract_features.py  extract_features_per_task.py  generate_instruction_tuning_data.py  llama_finetune.py  llama_finetune_conditioned.py  llama_finetune_hierarchical.py  llama_finetune_instruction.py  phase1_config.yaml  phase1_runner.sh  sanity_check.py  schema.py  text_finetune.py  text_finetune_conditioned.py  text_finetune_hierarchical.py  unsloth_finetune.py
wandb/: latest-run
wandb/run-20260502_142134-7zd71a99/: run-7zd71a99.wandb
wandb/run-20260502_142134-7zd71a99/files/: requirements.txt  wandb-metadata.json
wandb/run-20260502_142742-bd7qqvhj/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260502_164112-k82ipkyj/files/: wandb-metadata.json
wandb/run-20260502_165146-wyvazz34/: run-wyvazz34.wandb
wandb/run-20260502_165146-wyvazz34/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260502_181036-nfyf1bcb/files/: requirements.txt  wandb-metadata.json
