[project]
name = "cancer-survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "ipykernel>=6.30.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "peft>=0.19.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

