[project]
name = "cancer-survival-predictor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers>=4.46.0,<5.0.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "lifelines>=0.29.0",
    "datasets>=2.13.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "tqdm>=4.66.0",
    "wandb>=0.15.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.17.0",
    "safetensors>=0.4.0",
    "unsloth>=2026.5.2",
    "triton==3.2.0",
    "ipykernel>=7.2.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
